fixed bug in farm records

--- a/app/src/main/res/layout/fragment_store_add_fertilizer.xml
+++ b/app/src/main/res/layout/fragment_store_add_fertilizer.xml
@@ -58,20 +58,45 @@
                     android:orientation="horizontal">
 
 
-                    <EditText
-                        android:id="@+id/txt_crop_fertilizer_date_of_purchase"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:paddingStart="@dimen/dimen_10dp"
-                        android:layout_weight="1"
-                        android:hint="Select"
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:background="@drawable/edittext_corner"
-                        android:inputType="none"
-                        android:focusable="false"
-                        android:textSize="14sp" />
+                        android:layout_marginRight="10dp"
+                        android:orientation="horizontal"
+                        android:layout_weight="1">
+
+                        <EditText
+                            android:id="@+id/txt_crop_fertilizer_date_of_purchase"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center"
+                            android:background="@android:color/transparent"
+                            android:layout_marginLeft="5dp"
+                            android:hint="Purchase Date"
+                            android:paddingStart="@dimen/dimen_10dp"
+                            android:inputType="none"
+                            android:textSize="14sp"
+                            android:layout_marginRight="10dp"/>
+
+                        <ImageView
+                            android:id="@+id/image_date_picker"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_calendar" />
+
+                    </RelativeLayout>
 
                     <RelativeLayout
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:gravity="center"
