--- a/app/src/main/res/layout/fragment_add_financial_record.xml
+++ b/app/src/main/res/layout/fragment_add_financial_record.xml
@@ -56,25 +56,42 @@
                     android:orientation="horizontal"
                     android:layout_marginBottom="@dimen/dimen_20dp">
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:layout_marginEnd="10dp"
+                        android:gravity="center"
+                        android:background="@drawable/edittext_corner"
+                        android:layout_marginRight="10dp"
+                        android:orientation="horizontal"
                         android:layout_weight="1">
-
-
 
                         <EditText
                             android:id="@+id/txt_crop_income_expense_date"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center"
+                            android:background="@android:color/transparent"
+                            android:layout_marginLeft="5dp"
+                            android:hint="Date"
                             android:paddingStart="@dimen/dimen_10dp"
-                            android:hint="@string/date"
-                            android:background="@drawable/edittext_corner"
-                            android:inputType="text"
-                            android:textSize="14sp" />
-                    </LinearLayout>
+                            android:inputType="none"
+                            android:textSize="14sp"
+                            android:layout_marginRight="10dp"/>
+
+                        <ImageView
+                            android:id="@+id/image_date_picker"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_calendar" />
+
+                    </RelativeLayout>
 
                     <RelativeLayout
                         android:layout_width="match_parent"
