--- a/app/src/main/res/layout/fragment_store_add_seed.xml
+++ b/app/src/main/res/layout/fragment_store_add_seed.xml
@@ -56,26 +56,44 @@
                     android:orientation="horizontal"
                     android:layout_marginBottom="@dimen/dimen_20dp">
 
-                    <LinearLayout
-                        android:layout_width="0dp"
+                    <RelativeLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
-
+                        android:gravity="center"
+                        android:background="@drawable/edittext_corner"
+                        android:layout_marginRight="10dp"
+                        android:orientation="horizontal"
+                        android:layout_weight="1">
 
                         <EditText
                             android:id="@+id/txt_crop_purchase_date"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
-                            android:paddingStart="@dimen/dimen_10dp"
-                            android:background="@drawable/edittext_corner"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center"
+                            android:background="@android:color/transparent"
+                            android:layout_marginLeft="5dp"
                             android:hint="Purchase Date"
+                            android:paddingStart="@dimen/dimen_10dp"
                             android:inputType="none"
                             android:textSize="14sp"
                             android:layout_marginRight="10dp"/>
-                    </LinearLayout>
+
+                        <ImageView
+                            android:id="@+id/image_date_picker"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_calendar" />
+
+                    </RelativeLayout>
                     <LinearLayout
-                        android:layout_width="0dp"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:layout_weight="1">
