--- a/app/src/main/res/layout/fragment_store_add_spray.xml
+++ b/app/src/main/res/layout/fragment_store_add_spray.xml
@@ -52,30 +52,45 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/dimen_30dp"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    >
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical"
-                        android:layout_marginRight="8dp">
-
-
+                        android:gravity="center"
+                        android:background="@drawable/edittext_corner"
+                        android:layout_marginRight="10dp"
+                        android:orientation="horizontal"
+                        android:layout_weight="1">
 
                         <EditText
                             android:id="@+id/txt_crop_spray_date_of_purchase"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
-                            android:paddingStart="@dimen/dimen_10dp"
-                            android:layout_weight="0.5"
-                            android:background="@drawable/edittext_corner"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center"
+                            android:background="@android:color/transparent"
+                            android:layout_marginLeft="5dp"
                             android:hint="Purchase Date"
+                            android:paddingStart="@dimen/dimen_10dp"
                             android:inputType="none"
-                            android:focusable="false"
-                            android:textSize="14sp" />
+                            android:textSize="14sp"
+                            android:layout_marginRight="10dp"/>
 
-                    </LinearLayout>
+                        <ImageView
+                            android:id="@+id/image_date_picker"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_calendar" />
+
+                    </RelativeLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -296,11 +311,6 @@
 
                 </LinearLayout>
 
-
-
-
-
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -331,32 +341,46 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
+                    android:background="@drawable/edittext_corner"
                     android:layout_marginBottom="@dimen/dimen_30dp"
                     android:orientation="horizontal">
 
 
-                    <LinearLayout
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
-
-
+                        android:gravity="center"
+                        android:background="@drawable/edittext_corner"
+                        android:orientation="horizontal"
+                        android:layout_weight="1">
 
                         <EditText
                             android:id="@+id/txt_crop_pray_exp_date"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
-                            android:paddingStart="@dimen/dimen_10dp"
-                            android:layout_weight="0.5"
-                            android:background="@drawable/edittext_corner"
-                            android:inputType="none"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center"
+                            android:background="@android:color/transparent"
+                            android:layout_marginLeft="5dp"
                             android:hint="Expiry Date"
-                            android:focusable="false"
-                            android:textSize="14sp" />
+                            android:paddingStart="@dimen/dimen_10dp"
+                            android:inputType="none"
+                            android:textSize="14sp"
+                            android:layout_marginRight="10dp"/>
 
-                    </LinearLayout>
+                        <ImageView
+                            android:id="@+id/image_expiry_date_picker"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_calendar" />
+
+                    </RelativeLayout>
 
 
                 </LinearLayout>
