Spraying bug fix

--- a/app/src/main/res/layout/crop_spraying_list_card.xml
+++ b/app/src/main/res/layout/crop_spraying_list_card.xml
@@ -21,10 +21,12 @@
 
 
             <ImageView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:padding="@dimen/dimen_5dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/spraying" />
+                android:background="@color/black"
+                android:src="@drawable/ic_spraying" />
 
             <View
                 android:id="@+id/txt_view_crop_spraying_card_line"
@@ -52,7 +54,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="20-08-2018"
                 android:textSize="18sp"
-                android:textColor="#A6C0A7" />
+                android:textColor="@color/colorPrimary" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -80,7 +82,7 @@
                         android:textSize="18sp"
                         android:textAlignment="gravity"
                         android:text="Spraying"
-                        android:textColor="@color/blackText" />
+                        android:textColor="@color/colorPrimary" />
                   <LinearLayout
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
@@ -93,7 +95,8 @@
                           android:id="@+id/img_crop_spraying_card_more"
                           android:layout_width="24dp"
                           android:layout_height="24dp"
-                          android:src="@drawable/ic_baseline_more_vert" />
+                          android:src="@drawable/ic_baseline_more_vert"
+                          app:tint="@color/colorPrimary" />
                   </LinearLayout>
               </LinearLayout>
                 <View
@@ -109,44 +112,23 @@
                     android:layout_margin="0dp"
                     android:padding="4dp">
 
-                        <TextView
-                            android:id="@+id/txt_view_crop_spraying_card_spray_name"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_marginStart="35dp"
-                            android:textSize="14sp"
-                            android:text="Weed Control Spray"
-                            android:textColor="@color/blackText" />
+                    <TextView
+                        android:id="@+id/txt_view_crop_spraying_card_spray_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="35dp"
+                        android:textSize="14sp"
+                        android:text="Weed Control Spray"
+                        android:textColor="@color/blackText" />
+
+                    <TextView
+                        android:id="@+id/txt_view_crop_spraying_card_spray_type"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:text="(Solid)"
+                        android:textColor="@color/blackText" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_margin="0dp"
-                    android:padding="4dp">
-
-                  <TextView
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:layout_weight="1"
-                      android:layout_marginStart="35dp"
-                      android:text="Operator : "
-                       android:textSize="14sp"
-                      android:textColor="@color/blackText"
-                       />
-
-                  <TextView
-                      android:id="@+id/txt_view_crop_spraying_card_operator"
-                      android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:layout_weight="1"
-                      android:text="John Kiwanuka"
-                      android:textColor="#899889" />
-                </LinearLayout>
-
-
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -161,7 +143,7 @@
                         android:layout_weight="1"
                         android:layout_marginStart="35dp"
                         android:text="Amount Used : "
-                         android:textSize="14sp"
+                        android:textSize="14sp"
                         android:textColor="@color/blackText"
                         />
 
@@ -172,7 +154,7 @@
                         android:layout_weight="1"
                         android:text="56kg"
                         android:textColor="#899889" />
-            </LinearLayout>
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -181,71 +163,37 @@
                     android:layout_margin="0dp"
                     android:padding="4dp">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="W.D : "
-                             android:textSize="14sp"
-                            android:layout_marginStart="35dp"
-                            android:layout_weight="1"
-                            android:textColor="@color/blackText"
-                            />
-
-                        <TextView
-                            android:id="@+id/txt_view_crop_spraying_card_wind_direction"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="NW "
-                            android:textColor="#899889" />
-                    </LinearLayout>
-
-
-
-
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="4dp"
-                    android:orientation="horizontal">
-
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="W.C : "
-                        android:textSize="14sp"
-                        android:layout_marginStart="35dp"
                         android:layout_weight="1"
+                        android:layout_marginStart="35dp"
+                        android:text="Recurrence : "
+                        android:textSize="14sp"
                         android:textColor="@color/blackText"
                         />
 
                     <TextView
-                        android:id="@+id/txt_view_crop_spraying_card_water_condition"
+                        android:id="@+id/txt_view_crop_spraying_recurrence"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Sunny"
+                        android:text="Daily"
                         android:textColor="#899889" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
+                    android:orientation="horizontal"
                     android:layout_marginBottom="20dp"
                     android:padding="2dp"
-                    android:visibility="gone">
+                    android:visibility="visible">
                     <TextView
 
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="1.5"
                         android:text="Reason : "
                         android:layout_marginStart="35dp"
 
@@ -262,45 +210,7 @@
                         android:text="To Control Pests"
                         android:textColor="#899889" />
                 </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_margin="0dp"
-                    >
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="30dp"
-                        android:orientation="horizontal"
-                        android:gravity="end"
-                        android:padding="0dp"
-                        android:layout_margin="0dp"
-                        android:id="@+id/layout_crop_field_card_show_hide"
-                        android:background="#B6C5B6">
 
-                        <ImageView
-                            android:id="@+id/img_crop_fields_card_show_crops"
-                            android:layout_width="15dp"
-                            android:layout_height="15dp"
-                            android:backgroundTint="@color/black"
-                            android:textColor="#D2DDD5"
-                            android:layout_marginRight="18.17dp"
-                            android:layout_marginTop="10dp"
-
-                            app:srcCompat="@drawable/arrow_drop_down" />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:id="@+id/layout_crop_field_expand"
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="#B6C5B6"
-                        android:visibility="gone"
-                        android:padding="4dp">
-
-
-                    </LinearLayout>
-                </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
