--- a/app/src/main/res/drawable/input_shapes_crops_card.xml
+++ b/app/src/main/res/drawable/input_shapes_crops_card.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
     <item>
-        <shape android:shape="rectangle" >
-            <solid android:color="#E3ECE3" />
+        <shape android:shape="rectangle">
+            <solid android:color="#efeff0" />
+
             <padding
                 android:bottom="1dp"
                 android:left="1dp"
