--- a/app/src/main/res/layout/crop_income_expense_list_card.xml
+++ b/app/src/main/res/layout/crop_income_expense_list_card.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#F4F4F4"
+    android:background="#F9F9F9"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
@@ -11,9 +11,7 @@
         android:background="@drawable/input_shapes_crops_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:padding="0dp">
 
 
@@ -23,26 +21,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="6dp">
+            android:orientation="vertical">
 
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="6dp"
-                    android:layout_marginStart="6dp"
-                    >
+                    android:padding="8dp"
+                    android:layout_marginStart="6dp">
 
                     <TextView
                         android:id="@+id/txt_crop_income_expense_card_item"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="5dp"
-                        android:text="Irrigation Pump"
+                        android:text="@string/default_income_expense_card_item"
                         android:textColor="#76A76A"
-
-                        android:textSize="17sp" />
+                        android:textStyle="bold"
+                        android:textSize="20sp" />
                     <LinearLayout
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
@@ -61,7 +57,7 @@
                             android:layout_height="25dp"
                             android:backgroundTint="@color/black"
                             android:textColor="@color/darker_gray"
-                            app:srcCompat="@drawable/ic_baseline_more_vert" />
+                            android:src="@drawable/ic_baseline_more_vert" />
 
 
                     </LinearLayout>
@@ -73,8 +69,6 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"
             android:background="#D2D3D2"
             />
 
@@ -92,18 +86,25 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.7"
+                            android:layout_weight="0.4"
                             android:text="Transaction "
                             android:textColor="#76A76A"
                             android:textSize="14dp" />
+                        <TextView
+                            android:textSize="14sp"
+                            android:textColor="#111"
+                            android:layout_width="0dp"
+                            android:layout_weight=".1"
+                            android:layout_height="wrap_content"
+                            android:text=":"/>
 
                         <TextView
                             android:id="@+id/txt_crop_income_expense_card_transaction"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.3"
+                            android:layout_weight="1"
                             android:layout_marginLeft="5dp"
                             android:text="Income"
                             android:textColor="#000"
@@ -130,18 +131,25 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.7"
+                            android:layout_weight="0.4"
                             android:text="Category "
                             android:textColor="#76A76A"
-                            android:textSize="14dp" />
+                            android:textSize="14sp" />
+                        <TextView
+                            android:textSize="14sp"
+                            android:textColor="#111"
+                            android:layout_width="0dp"
+                            android:layout_weight=".1"
+                            android:layout_height="wrap_content"
+                            android:text=":"/>
 
                         <TextView
                             android:id="@+id/txt_crop_income_expense_card_category"
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.3"
+                            android:layout_weight="1"
                             android:layout_marginLeft="5dp"
                             android:text="Machinery"
                             android:textColor="#000"
@@ -162,34 +170,85 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:padding="4dp"
-                        android:layout_marginBottom="8dp"
                         android:layout_marginStart="6dp"
                         android:layout_marginTop="3dp"
                         android:orientation="horizontal">
 
                         <TextView
-                            android:layout_width="match_parent"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:text="Status "
-                            android:layout_weight="0.7"
+                            android:text="@string/department"
+                            android:layout_weight="0.4"
                             android:textColor="#76A76A"
-                            android:textSize="14dp" />
+                            android:textSize="14sp" />
+                        <TextView
+                            android:textSize="14sp"
+                            android:textColor="#111"
+                            android:layout_width="0dp"
+                            android:layout_weight=".1"
+                            android:layout_height="wrap_content"
+                            android:text=":"/>
 
                         <TextView
-                            android:id="@+id/txt_crop_income_expense_card_status"
-                            android:layout_width="match_parent"
+                            android:id="@+id/txt_crop_income_expense_card_department"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="0.3"
-                            android:layout_marginLeft="5dp"
-                            android:text="Pending Payment"
+                            android:layout_weight="1"
+                            android:layout_marginStart="5dp"
+                            android:text="@string/default_income_expense_card_department"
                             android:textColor="#000"
-                            android:textSize="14dp" />
+                            android:textSize="14sp" />
 
 
 
                     </LinearLayout>
 
+
                 </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="4dp"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginTop="3dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="Status "
+                        android:layout_weight="0.4"
+                        android:textColor="#76A76A"
+                        android:textSize="14sp" />
+                    <TextView
+                        android:textSize="14sp"
+                        android:textColor="#111"
+                        android:layout_width="0dp"
+                        android:layout_weight=".1"
+                        android:layout_height="wrap_content"
+                        android:text=":"/>
+
+                    <TextView
+                        android:id="@+id/txt_crop_income_expense_card_status"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginLeft="5dp"
+                        android:text="Pending Payment"
+                        android:textColor="#000"
+                        android:textSize="14sp" />
+
+
+
+                </LinearLayout>
+
+
+            </LinearLayout>
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
@@ -205,18 +264,25 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="Amount "
-                        android:layout_weight="0.7"
+                        android:layout_weight="0.4"
                         android:textColor="#76A76A"
-                        android:textSize="14dp" />
+                        android:textSize="14sp" />
+                    <TextView
+                        android:textSize="14sp"
+                        android:textColor="#111"
+                        android:layout_width="0dp"
+                        android:layout_weight=".1"
+                        android:layout_height="wrap_content"
+                        android:text=":"/>
 
                     <TextView
                         android:id="@+id/txt_crop_income_expense_card_gross_amount"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.3"
+                        android:layout_weight="1"
                         android:layout_marginLeft="5dp"
                         android:text="200,000"
                         android:textColor="#000"
@@ -231,8 +297,6 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
                 android:background="#D2D3D2"
                 />
 
@@ -251,18 +315,25 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="Date "
-                        android:layout_weight="0.7"
+                        android:text="Date"
+                        android:layout_weight="0.4"
                         android:textColor="#76A76A"
-                        android:textSize="14dp" />
+                        android:textSize="14sp" />
+                    <TextView
+                        android:textSize="14sp"
+                        android:textColor="#111"
+                        android:layout_width="0dp"
+                        android:layout_weight=".1"
+                        android:layout_height="wrap_content"
+                        android:text=":"/>
 
                     <TextView
                         android:id="@+id/txt_crop_income_expense_card_date"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="0.3"
+                        android:layout_weight="1"
                         android:layout_marginLeft="5dp"
                         android:text="12-03-2019"
                         android:textColor="#000"
