--- a/app/src/main/res/layout/fragment_store.xml
+++ b/app/src/main/res/layout/fragment_store.xml
@@ -44,7 +44,7 @@
 
 
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -62,7 +62,6 @@
                         android:gravity="center"
                         android:paddingLeft="@dimen/margin_10"
                         android:entries="@array/cropInventories"
-                        android:hint="Seed Type"
                         android:spinnerMode="dropdown"/>
 
                     <ImageView
@@ -71,12 +70,12 @@
                         android:layout_alignParentRight="true"
                         android:layout_alignParentEnd="true"
                         android:layout_marginEnd="8dp"
-                        android:layout_marginRight="10dp"
+                        android:layout_marginRight="8dp"
                         android:layout_centerVertical="true"
                         android:layout_gravity="center"
                         android:src="@drawable/ic_baseline_arrow_drop_down_24" />
 
-                </LinearLayout>
+                </RelativeLayout>
 
 
 
@@ -84,8 +83,6 @@
                     android:id="@+id/inventory_recyc_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dimen_20dp"
-                    android:layout_marginRight="@dimen/dimen_20dp"
                     android:layout_marginBottom="@dimen/dimen_20dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
