Fixed notes Navigation conflicts

--- a/app/src/main/res/navigation/farm_records_nav_graph.xml
+++ b/app/src/main/res/navigation/farm_records_nav_graph.xml
@@ -36,6 +36,9 @@
         <action
             android:id="@+id/action_cropRecordsFragment_to_productionReportsFragment"
             app:destination="@id/productionReportsFragment" />
+        <action
+            android:id="@+id/action_cropRecordsFragment_to_farmRecordsHomeFragment"
+            app:destination="@id/farmRecordsHomeFragment" />
     </fragment>
     <fragment
         android:id="@+id/livestockRecordsFragment"
@@ -115,6 +118,9 @@
         <action
             android:id="@+id/action_cropListFragment_to_cropsNotesListFragment"
             app:destination="@id/cropsNotesListFragment" />
+        <action
+            android:id="@+id/action_cropListFragment_to_cropRecordsFragment"
+            app:destination="@id/cropRecordsFragment" />
 
     </fragment>
     <fragment
@@ -223,6 +229,8 @@
         tools:layout="@layout/fragment_add_crop_notes" >
         <action
             android:id="@+id/action_addCropNotesFragment_to_cropsNotesListFragment"
+            app:popUpToInclusive="true"
+            app:popUpTo="@+id/main_nav_graph"
             app:destination="@id/cropsNotesListFragment" />
     </fragment>
     <fragment
