Modified mating list item

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -5,6 +5,9 @@
         <item name="android:windowAnimationStyle">@style/DialogAnimation</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:statusBarColor">?attr/colorPrimaryDark</item>
+        <item name="android:fontFamily">>@font/josefin_sans</item>
+        <item name="android:typeface">serif</item>
+
     </style>
 
 </resources>
