--- a/app/src/main/res/layout/mating_list_item.xml
+++ b/app/src/main/res/layout/mating_list_item.xml
@@ -60,6 +60,13 @@
                 app:layout_constraintGuide_percent="0.65" />
 
             <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline60"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_percent="0.166666667" />
+
+            <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline32"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -91,7 +98,7 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@color/gray"
-                app:layout_constraintBottom_toTopOf="@+id/guideline32"
+                app:layout_constraintBottom_toTopOf="@+id/guideline60"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -108,9 +115,22 @@
                 android:textColor="@android:color/black"
                 android:textSize="@dimen/dimen_20sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/guideline32"
+                app:layout_constraintBottom_toTopOf="@+id/guideline60"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:id="@+id/mating_item_more"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:backgroundTint="@color/black"
+                android:textColor="@color/darker_gray"
+                android:src="@drawable/ic_baseline_more_vert"
+                android:layout_gravity="end"
+                android:padding="@dimen/dimen_5dp"
+                app:layout_constraintBottom_toTopOf="@+id/guideline60"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/guideline40"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -138,10 +158,10 @@
                 android:paddingEnd="@dimen/margin_10"
                 android:text="Male"
                 android:textColor="@color/colorPrimary"
-                app:layout_constraintBottom_toTopOf="@+id/guideline33"
-                app:layout_constraintEnd_toStartOf="@+id/guideline39"
-                app:layout_constraintStart_toStartOf="@+id/guideline30"
-                app:layout_constraintTop_toTopOf="@+id/guideline32" />
+                app:layout_constraintBottom_toTopOf="@+id/guideline32"
+                app:layout_constraintEnd_toStartOf="@+id/guideline29"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/guideline60" />
 
             <TextView
                 android:id="@+id/textView"
@@ -165,10 +185,10 @@
                 android:text=":"
                 android:textColor="@color/black"
                 app:autoSizeTextType="uniform"
-                app:layout_constraintBottom_toTopOf="@+id/guideline33"
-                app:layout_constraintEnd_toStartOf="@+id/guideline40"
-                app:layout_constraintStart_toStartOf="@+id/guideline39"
-                app:layout_constraintTop_toTopOf="@+id/guideline32" />
+                app:layout_constraintBottom_toTopOf="@+id/guideline32"
+                app:layout_constraintEnd_toStartOf="@+id/guideline37"
+                app:layout_constraintStart_toStartOf="@+id/guideline29"
+                app:layout_constraintTop_toTopOf="@+id/guideline60" />
 
             <TextView
                 android:id="@+id/mating_item_female"
@@ -199,10 +219,10 @@
                 android:paddingEnd="@dimen/margin_10"
                 android:text="A001"
                 android:textColor="@android:color/black"
-                app:layout_constraintBottom_toTopOf="@+id/guideline33"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/guideline40"
-                app:layout_constraintTop_toTopOf="@+id/guideline32" />
+                app:layout_constraintBottom_toTopOf="@+id/guideline32"
+                app:layout_constraintEnd_toStartOf="@+id/guideline30"
+                app:layout_constraintStart_toStartOf="@+id/guideline37"
+                app:layout_constraintTop_toTopOf="@+id/guideline60" />
 
             <TextView
                 android:layout_width="0dp"
